--- a/WebContent/login.xhtml
+++ b/WebContent/login.xhtml
@@ -6,16 +6,22 @@
 	xmlns:f="http://xmlns.jcp.org/jsf/core">
 <h:head>
 	<title>Login - JSF</title>
+	<h:outputScript library="js" name="jquery-3.4.0.min.js" />
+	<h:outputScript library="js" name="bootstrap.min.js" />
+	<h:outputStylesheet library="css" name="bootstrap.min.css" />
 </h:head>
 <h:body>
+	<h:messages />
 	<h:form>
-		<h:outputLabel value="Login" />
-		<h:inputText value="#{loginBean.login}" />
-		<h:outputLabel value="Senha" />
-		<h:inputText value="#{loginBean.senha}" />
-		<h:selectBooleanCheckbox value="#{loginBean.termo}" id="termo" />
-		<h:outputLabel value="Manter Conectado" for="termo" />
-		<h:commandButton action="#{loginBean.logar}" value="Entrar" />
+		<h:panelGrid columns="2">
+			<h:outputLabel value="Login" />
+			<h:inputText value="#{loginBean.login}" />
+			<h:outputLabel value="Senha" />
+			<h:inputText value="#{loginBean.senha}" />
+			<h:selectBooleanCheckbox value="#{loginBean.termo}" id="termo" />
+			<h:outputLabel value="Manter Conectado" for="termo" />
+			<h:commandButton action="#{loginBean.logar}" value="Entrar" />
+		</h:panelGrid>
 	</h:form>
 </h:body>
 </html>
