--- a/WebContent/login.xhtml
+++ b/WebContent/login.xhtml
@@ -4,24 +4,32 @@
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core">
-<h:head>
-	<title>Login - JSF</title>
-	<h:outputScript library="js" name="jquery-3.4.0.min.js" />
-	<h:outputScript library="js" name="bootstrap.min.js" />
-	<h:outputStylesheet library="css" name="bootstrap.min.css" />
-</h:head>
-<h:body>
-	<h:messages />
-	<h:form>
-		<h:panelGrid columns="2">
-			<h:outputLabel value="Login" />
-			<h:inputText value="#{loginBean.login}" />
-			<h:outputLabel value="Senha" />
-			<h:inputText value="#{loginBean.senha}" />
-			<h:selectBooleanCheckbox value="#{loginBean.termo}" id="termo" />
-			<h:outputLabel value="Manter Conectado" for="termo" />
-			<h:commandButton action="#{loginBean.logar}" value="Entrar" />
-		</h:panelGrid>
-	</h:form>
-</h:body>
+
+<ui:composition template="_template.xhtml">
+	<ui:define name="titulo">
+		Login - JSF
+	</ui:define>
+	<ui:define name="js">
+		<h:outputScript library="js" name="jquery-3.4.0.min.js" />
+		<h:outputScript library="js" name="bootstrap.min.js" />
+	</ui:define>
+	<ui:define name="css">
+		<h:outputStylesheet library="css" name="bootstrap.min.css" />
+	</ui:define>
+	
+	<ui:define name="corpo">
+		<h:messages />
+		<h:form>
+			<h:panelGrid columns="2">
+				<h:outputLabel value="Login" />
+				<h:inputText value="#{loginBean.login}" />
+				<h:outputLabel value="Senha" />
+				<h:inputText value="#{loginBean.senha}" />
+				<h:selectBooleanCheckbox value="#{loginBean.termo}" id="termo" />
+				<h:outputLabel value="Manter Conectado" for="termo" />
+				<h:commandButton action="#{loginBean.logar}" value="Entrar" />
+			</h:panelGrid>
+		</h:form>
+	</ui:define>
+</ui:composition>
 </html>
