--- a/WebContent/cadastro.xhtml
+++ b/WebContent/cadastro.xhtml
@@ -4,41 +4,39 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
-	xmlns:f="http://xmlns.jcp.org/jsf/core">
+	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:p="http://primefaces.org/ui">
 
 <ui:composition template="_template.xhtml">
 	<ui:define name="titulo">
 	  Cadastro - JSF
 	</ui:define>
-	<ui:define name="js">
-		<h:outputScript library="js" name="jquery-3.4.0.min.js" />
-		<h:outputScript library="js" name="bootstrap.min.js" />
-	</ui:define>
 	<ui:define name="css">
 		<h:outputStylesheet library="css" name="bootstrap.min.css" />
 	</ui:define>
-	
+
 	<ui:define name="corpo">
 		<h:form>
 			<h:panelGrid columns="3">
-				<h:outputLabel value="Nome" />
-				<h:inputText id="nome" required="true" requiredMessage="Nome Obrigatório" 
-					 validator="#{cadastroBean.validaDado}" value="#{cadastroBean.nome}"> 
-				</h:inputText>
-				<h:messages for="nome"/>
-				<h:outputLabel value="CPF" />
-				<h:inputText id="cpf" required="true" requiredMessage="CPF Obrigatório" 
-				 	validatorMessage="Campo deve ter 11 digitos" value="#{cadastroBean.cpf}"> 
-					<f:validateLength minimum="11" maximum="11" />
-				</h:inputText>
-				<h:messages for="cpf"/>
-				<h:outputLabel value="Idade" />
-				<h:inputText id="idade" validatorMessage="Idade entre 0 a 120" value="#{cadastroBean.idade}"> 
+				<p:outputLabel value="Nome" />
+				<p:inputText id="nome" required="true"
+					requiredMessage="Nome Obrigatório"
+					validator="#{cadastroBean.validaDado}" value="#{cadastroBean.nome}">
+				</p:inputText>
+				<p:messages for="nome" />
+				<p:outputLabel for="cpf" value="CPF" />
+				<p:inputMask mask="999.999.999-99" id="cpf"
+					value="#{cadastroBean.cpf}"> 
+				</p:inputMask>
+				<p:messages for="cpf" />
+				<p:outputLabel value="Idade" />
+				<p:inputText id="idade" validatorMessage="Idade entre 0 a 120"
+					value="#{cadastroBean.idade}">
 					<f:validateLongRange minimum="0" maximum="120" />
-				</h:inputText>
-				<h:messages for="idade" />
-			
-				<h:commandButton action="#{cadastroBean.validar}" value="Cadastrar" />
+				</p:inputText>
+				<p:messages for="idade" />
+
+				<p:commandButton action="#{cadastroBean.validar}" value="Cadastrar" />
 			</h:panelGrid>
 		</h:form>
 	</ui:define>
