--- a/WebContent/carrinho.xhtml
+++ b/WebContent/carrinho.xhtml
@@ -4,34 +4,35 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
-	xmlns:f="http://xmlns.jcp.org/jsf/core">
+	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:p="http://primefaces.org/ui">
 
 <h:head>
 	<title>Carrinho - JSF</title>
 </h:head>
 <h:body>
 	<h:form>
-		<h:selectManyCheckbox value="#{carrinhoBean.produtos}">
+		<p:selectManyCheckbox value="#{carrinhoBean.produtos}">
 			<f:selectItems value="#{carrinhoBean.produtosTodos}" var="produto"
 				itemLabel="#{produto.nome}" itemValue="#{produto.nome}" />
-		</h:selectManyCheckbox>
-		<h:selectOneMenu value="#{carrinhoBean.qtdItens}">
+		</p:selectManyCheckbox>
+		<p:selectOneMenu value="#{carrinhoBean.qtdItens}">
 			<f:selectItem itemLabel="0" itemValue="0"/>
 			<f:selectItem itemLabel="1" itemValue="1"/>
 			<f:selectItem itemLabel="2" itemValue="2"/>
 			<f:selectItem itemLabel="3" itemValue="3"/>
 			<f:selectItem itemLabel="4" itemValue="4"/>
 			<f:selectItem itemLabel="5" itemValue="5"/>
-		</h:selectOneMenu>
+		</p:selectOneMenu>
 
 
-		<h:selectOneRadio value="#{carrinhoBean.tipoPagamento}">
+		<p:selectOneRadio value="#{carrinhoBean.tipoPagamento}">
 			<f:selectItems value="#{carrinhoBean.formaPagamento}"
 				var="tipoPagamento" itemLabel="#{tipoPagamento.nome}"
 				itemValue="#{tipoPagamento.id}" />
-		</h:selectOneRadio>
+		</p:selectOneRadio>
 
-		<h:commandButton action="#{carrinhoBean.comprar}" value="OK" />
+		<p:commandButton action="#{carrinhoBean.comprar}" value="OK" />
 	</h:form>
 </h:body>
 </html>
