--- a/WebContent/login.xhtml
+++ b/WebContent/login.xhtml
@@ -3,7 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
-	xmlns:f="http://xmlns.jcp.org/jsf/core">
+	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:p="http://primefaces.org/ui">
 
 <ui:composition template="_template.xhtml">
 	<ui:define name="titulo">
@@ -21,13 +22,13 @@
 		<h:messages />
 		<h:form>
 			<h:panelGrid columns="2">
-				<h:outputLabel value="Login" />
-				<h:inputText value="#{loginBean.login}" />
-				<h:outputLabel value="Senha" />
-				<h:inputText value="#{loginBean.senha}" />
-				<h:selectBooleanCheckbox value="#{loginBean.termo}" id="termo" />
-				<h:outputLabel value="Manter Conectado" for="termo" />
-				<h:commandButton action="#{loginBean.logar}" value="Entrar" />
+				<p:outputLabel value="Login" />
+				<p:inputText value="#{loginBean.login}" />
+				<p:outputLabel value="Senha" />
+				<p:password value="#{loginBean.senha}" />
+				<p:selectBooleanCheckbox value="#{loginBean.termo}" id="termo" />
+				<p:outputLabel value="Manter Conectado" for="termo" />
+				<p:commandButton action="#{loginBean.logar}" value="Entrar" />
 			</h:panelGrid>
 		</h:form>
 	</ui:define>
