--- a/WebContent/cliente.xhtml
+++ b/WebContent/cliente.xhtml
@@ -16,7 +16,9 @@
 	</ui:define>
 
 	<ui:define name="corpo">
-		<p:dataTable value="#{clienteBean.lista}" var="cliente">
+		<p:dataTable value="#{clienteBean.lista}" var="cliente"
+			paginator="true" rows="5" emptyMessage="Cliente não encontrados"
+			rowsPerPageTemplate="5,10,15">
 			<p:column headerText="Nome">
 				#{cliente.name}
 			</p:column>
@@ -24,9 +26,7 @@
 				#{cliente.cpf}
 			</p:column>
 			<p:column headerText="Data Nascimento">
-				<h:outputText value="#{cliente.dataNascimento.time}"
-					paginator="true" rows="5" emptyMessage="Cliente não encontrados"
-					rowsPerPageTemplate="5,10,15">
+				<h:outputText value="#{cliente.dataNascimento.time}">
 					<f:convertDateTime pattern="dd/MM/yyyy" />
 				</h:outputText>
 			</p:column>
